--- a/vr/grad.html
+++ b/vr/grad.html
@@ -184,7 +184,7 @@ found in the LICENSE file.
 
           // Once the scene is fully loaded kick off the animation loop
           vrDisplay.requestAnimationFrame(onAnimationFrame);
-        }, 5000);
+        }, 1000);
       }
 
       function onVRRequestPresent () {
@@ -327,10 +327,10 @@ found in the LICENSE file.
         vrDisplay.getFrameData(frameData);
 
         gl.viewport(0, 0, webglCanvas.width * 0.5, webglCanvas.height);
-        cubeSea.render(frameData.leftProjectionMatrix, frameData.leftViewMatrix, stats, t);
+        cubeSea.render(frameData.leftProjectionMatrix, frameData.leftViewMatrix);
 
         gl.viewport(webglCanvas.width * 0.5, 0, webglCanvas.width * 0.5, webglCanvas.height);
-        cubeSea.render(frameData.rightProjectionMatrix, frameData.rightViewMatrix, stats, t);
+        cubeSea.render(frameData.rightProjectionMatrix, frameData.rightViewMatrix);
 
         vrDisplay.submitFrame();
 
