--- a/vr/grad.html
+++ b/vr/grad.html
@@ -176,7 +176,7 @@ found in the LICENSE file.
       function loadScene() {
         // Totally cheating here to pretend like our load times are long
         setTimeout(function () {
-          var texture = textureLoader.loadTexture("media/textures/cube-sea.png");
+          var texture = textureLoader.loadTexture("media/textures/lum_grad.png");
           cubeSea = new VRCubeSea(gl, texture);
           var enablePerformanceMonitoring = WGLUUrl.getBool(
               'enablePerformanceMonitoring', false);
