--- a/vr/grad.html
+++ b/vr/grad.html
@@ -326,7 +326,7 @@ found in the LICENSE file.
         for(var i = 0; i<gamepads.length; ++i){
           if(gamepads[i]){
             if(gamepads[i].pose){
-              gamepad = gamepad[i];
+              gamepad = gamepads[i];
             }
           }
         }
