--- a/vr/grad.html
+++ b/vr/grad.html
@@ -83,6 +83,8 @@ found in the LICENSE file.
       var projectionMat = mat4.create();
       var viewMat = mat4.create();
       var vrPresentButton = null;
+      var connection = null;
+      var selection = 0;
 
       // ================================
       // WebVR-specific code begins here.
@@ -125,6 +127,7 @@ found in the LICENSE file.
       var stats = null;
       var textureLoader = null;
       var splashScreen = null;
+      var neutralColour = vec4.fromValues(0, 0, 1, 1);
 
       // This sample is going to use a slightly different start up sequence.
       // In order to show the splash screen effect we won't have any magic
@@ -173,18 +176,43 @@ found in the LICENSE file.
       }
 
       function loadScene() {
-        // Totally cheating here to pretend like our load times are long
+        //we set up our connection to matlab :) then attempt to grab gradient files
+
         setTimeout(function () {
-          var texturePerfect = textureLoader.loadTexture("media/textures/grad_10.png");
-          var textureQuantised = textureLoader.loadTexture("media/textures/grad_7.png");
+          var perfectTextureLocation = '';
+          var quantisedTextureLocation = '';
+          connection = new WebSocket('ws://localhost:30000');
+          connection.onmessage = function (e) {
+            selection = null;
+            var json = JSON.parse(e.data);
+            perfectTextureLocation = json.refImage;
+            quantisedTextureLocation = json.quantImage;
+            console.log(quantisedTextureLocation);
+            console.log(perfectTextureLocation);
+            var texturePerfect = textureLoader.loadTexture(perfectTextureLocation);
+            var textureQuantised = textureLoader.loadTexture(quantisedTextureLocation);
 
-          gradientExperiment = new VRGradientExperiment(gl, texturePerfect, textureQuantised, 6);
-          var enablePerformanceMonitoring = WGLUUrl.getBool(
-              'enablePerformanceMonitoring', false);
-          stats = new WGLUStats(gl, enablePerformanceMonitoring);
+            var fb = gl.createFramebuffer();
+            gl.bindFramebuffer(gl.FRAMEBUFFER, fb);
+            gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, textureQuantised, 0);
+            console.log(textureQuantised);
+            console.log(gl.checkFramebufferStatus(gl.FRAMEBUFFER));
+            if (gl.checkFramebufferStatus(gl.FRAMEBUFFER) == gl.FRAMEBUFFER_COMPLETE) {
+              var pixels = new Uint8Array(4);
+              gl.readPixels(0, 0, 1, 1, gl.RGBA, gl.UNSIGNED_BYTE, pixels);
+              gl.clearColor(pixels[0]/255.0, pixels[1]/255.0, pixels[2]/255.0, pixels[3]/255.0); //set the clear colour to the neutral colour 
 
-          // Once the scene is fully loaded kick off the animation loop
-          vrDisplay.requestAnimationFrame(onAnimationFrame);
+            }
+            gl.bindFramebuffer(gl.FRAMEBUFFER, null);
+
+            gradientExperiment = new VRGradientExperiment(gl, texturePerfect, textureQuantised, 6);
+            var enablePerformanceMonitoring = WGLUUrl.getBool(
+                'enablePerformanceMonitoring', false);
+            stats = new WGLUStats(gl, enablePerformanceMonitoring);
+
+            // Once the scene is fully loaded kick off the animation loop
+            vrDisplay.requestAnimationFrame(onAnimationFrame);
+          };
         }, 1000);
       }
 
@@ -314,6 +342,52 @@ found in the LICENSE file.
         loadScene();
       }
 
+      var isClicked = function(gamepad){
+        for (var j = 0; j < gamepad.buttons.length; ++j) {
+          if(gamepad.buttons[j].pressed){ 
+            return true;
+          }
+        }
+        return false;
+      };
+
+      var extractGradientSelection = function(gamepad){
+        //returns the selection the thing was pointing to, if it was indeed clicked
+        if(gamepad && isClicked(gamepad)){
+          var orientation = mat4.create()
+          getPoseMatrix(orientation, gamepad.pose, true);
+          var unit = vec4.fromValues(0, 0, 1, 1);
+          mat4.multiply(unit, orientation, unit);
+          if(unit[0] < 0){
+            //top half of the screen
+            if(unit[1] < 0){
+              //top left
+              return 2;
+            }
+            else{
+              return 4;
+            }
+          }
+          else{
+            //bottom half of the screen
+            if(unit[1] < 0){
+              return 1;
+            }
+            else{
+              return 3;
+            }
+          }
+        }
+        else{
+          return 0;
+        }
+      };
+
+      function getPoseMatrix (out, pose) {
+        var orientation = pose.orientation;
+        mat4.fromRotationTranslation(out, orientation, vec3.fromValues(0,0,0));
+      }
+
       function onAnimationFrame (t) {
         if (!vrDisplay.isPresenting)
           return;
@@ -333,16 +407,24 @@ found in the LICENSE file.
           }
         }
 
+        var newSelection = extractGradientSelection(gamepad);
+        
+        if(selection && !newSelection){ //if they've let go of the selection pad :)
+          console.log(selection == gradientExperiment.quantisedPlane);
+          connection.send(selection == gradientExperiment.quantisedPlane);
+          return;
+        }
 
+        selection = newSelection;
         vrDisplay.requestAnimationFrame(onAnimationFrame);
 
         vrDisplay.getFrameData(frameData);
 
         gl.viewport(0, 0, webglCanvas.width * 0.5, webglCanvas.height);
-        gradientExperiment.render(frameData.leftProjectionMatrix, frameData.leftViewMatrix, gamepad, t);
+        gradientExperiment.render(frameData.leftProjectionMatrix, frameData.leftViewMatrix, selection, t);
 
         gl.viewport(webglCanvas.width * 0.5, 0, webglCanvas.width * 0.5, webglCanvas.height);
-        gradientExperiment.render(frameData.rightProjectionMatrix, frameData.rightViewMatrix, gamepad, t);
+        gradientExperiment.render(frameData.rightProjectionMatrix, frameData.rightViewMatrix, selection, t);
 
         vrDisplay.submitFrame();
 
